<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SandwichShop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_customize_text">Customize your sandwich!</string>
    <string name="radio_button_wheat_text">Wheat</string>
    <string name="radio_button_white_text">White</string>
    <string name="radio_button_rye_text">Rye</string>
    <string name="text_view_bread_text">Choose your bread...</string>
    <string name="text_view_condiments_text">Choose some condiments...</string>
    <string name="check_tomatoes_text">Tomatoes</string>
    <string name="check_pickles_text">Pickles</string>
    <string name="check_lettuce_text">Lettuce</string>
    <string name="check_olives_text">Olives</string>
    <string name="check_mayonnaise_text">Mayonnaise</string>
    <string name="check_mustard_text">Mustard</string>
    <string name="button_place_order_text">Place Order</string>
    <string name="title_activity_confirmation">Order Confirmation</string>
    <string name="text_view_confirmation_text">Your order has been placed successfully!</string>
    <string name="text_view_confirmation_bread_text">Bread:</string>
    <string name="text_view_confirmation_dialog">You have chosen...</string>
    <string name="text_view_confirmations_condiments">Condiments:</string>
    <string name="title_activity_selection">SandwichShop</string>
    <string name="text_view_selection_text">How many sandwiches would you like to order?</string>
    <string name="button_start_text">Start!</string>
    <string name="button_next_sandwich_text">Add Sandwich To The Order</string>

</resources>
